fixed alignment on color glossary

--- a/_sass/srplates.scss
+++ b/_sass/srplates.scss
@@ -463,7 +463,11 @@ div.cont-section p {
     font-weight: bold;
 }
 
-.colordesc{
+.color-dic {
+    width: 100%;
+}
+
+.colordesc {
     float: left;
     padding: 20px;
     font-family: 'Forum', 'Cinzel', serif;
